# gmlaas

./: CMakeLists.txt  README.md  Requirements.txt  package.xml  tree_structure.urdf
URDF/: tree.py  tree.urdf  tree_new.py
camera_info/: camera.yaml
datasets/: graph_dataset.csv  tags_dataset.csv
datasets/data/: close_H_data.csv  close_desired_frame_pose.csv  close_matching_data.csv  close_trajectory_data.csv  combination_desired_frame_pose.csv  combination_matching_data.csv  combination_trajectory_data.csv  crazy_desired_frame_pose.csv  desired_frame_pose.csv  lambda_08_close_desired_frame_pose.csv  lambda_08_close_matching_data.csv  lambda_08_close_trajectory_data.csv  lambda_08_desired_frame_pose.csv  lambda_08_matching_data.csv  lambda_08_trajectory_data.csv  matching_data.csv  no_desired_pts_desired_frame_pose.csv  no_desired_pts_matching_data.csv  no_desired_pts_trajectory_data.csv  test_matching_data.csv  test_trajectory_data.csv  translation_desired_frame_pose.csv  translation_matching_data.csv  translation_trajectory_data.csv
datasets/snapshots/: desired_frame_graph_dataset.csv  desired_frame_tags_dataset.csv  reference_graph_dataset.csv  reference_tags_dataset.csv
datasets/snapshots/simu/: desired_frame_graph_dataset.csv  desired_frame_pose.csv  reference_pose.csv  (+3 more)
gazebo/worlds/: gmlaas.world
include/: gazebo.material
include/gmlaas/: fake_graph_builder.hpp  graph_matcher.hpp  graph_node.hpp  params.hpp  visual_servoing_command.hpp
launch/: gazebo.launch  gmlaas_sim.launch  graph_matcher.launch  information_listener.launch  main.launch  object_move.launch  snapshot_listener.launch  test.launch  visual_servoing_command.launch
msg/: CustomMsg.msg  GraphBuilderMsg.msg  GraphMatcherMsg.msg  HData.msg  PreHData.msg  PreHMsg.msg
old/: graph_builder.hpp  graph_edge.cpp  graph_edge.hpp  main_graph_builder.cpp  mainn.py  reference.py
python_postprocessing/: data_processing.py  data_writer.py  error_calculation.py  plot_trajectory.py
python_scripts/: apriltag_read.py  apriltag_to_graph.py  computation.py  estimate_h_matrix.py  graph_builder.py  graph_matcher.py  h_computation.py  information_listener.py  mainn.py  object_move.py  pre_h_computation.py  snapshot_listener.py  standaloneHmatrix.py  standalone_h_matrix.py  test.py  visualization.py
src/: fake_graph_builder.cpp  graph_builder.cpp  graph_matcher.cpp  graph_node.cpp  main_fake_graph_builder.cpp  main_graph_builder.cpp  main_graph_matcher.cpp  main_tag_reader.cpp  main_visual_servoing_command.cpp  visual_servoing_command.cpp
text_files/: reference_adjacency_matrix.txt
urdf/: Cube.py  Stick.py  URDF_generator.py  car.urdf  car2.urdf  stronzo.urdf  tree.py  tree.urdf  tree100.urdf  tree2.py  tree_final.urdf  tree_with_branches.urdf  treeok.urdf  treetest.urdf  treetest1.urdf
